[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Battle/Ship/SpaceShip.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Battle/Control/Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Battle/Ship/Weapons/EmptyWpn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Images/overbar.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/Sprites and designs/LasterWindowDesign.png" type="Texture" id=5]
[ext_resource path="res://Resources/Images/Frames Images/shieldappear.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Battle/Ship/Weapons/BlastingCannon.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Images/shipbar.png" type="Texture" id=8]
[ext_resource path="res://Resources/Styles/normalbutton.tres" type="StyleBox" id=9]
[ext_resource path="res://Scenes/Battle/Control/WeaponSelector.tscn" type="PackedScene" id=10]
[ext_resource path="res://Resources/Images/undershipbar.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Shakings"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ShipWindow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.01111, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 4.6
tracks/0/type = "value"
tracks/0/path = NodePath("ShieldBarrier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.4, 1.7, 2, 2.3, 2.6, 2.9, 3.2, 3.5, 3.8, 4.1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[node name="SpaceShip" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 91.0 ]
}
usable_modules = 4
default_wpn_scenes = [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ]

[node name="ShieldBarrier" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.0784314 )
position = Vector2( 90, 180 )
texture = ExtResource( 6 )
hframes = 13

[node name="Weapons" type="Node2D" parent="."]
position = Vector2( 90, 160 )

[node name="WpnPos1" type="Position2D" parent="Weapons"]
position = Vector2( 82, 65 )

[node name="WpnPos2" type="Position2D" parent="Weapons"]
position = Vector2( -82, 65 )

[node name="WpnPos3" type="Position2D" parent="Weapons"]
position = Vector2( -80, -100 )

[node name="WpnPos4" type="Position2D" parent="Weapons"]
position = Vector2( 80, -100 )

[node name="ShipWindow" type="Sprite" parent="."]
position = Vector2( 90, 160 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.6
anims/Shakings = SubResource( 1 )
"anims/Shield appear" = SubResource( 2 )

[node name="ShipUI" type="Control" parent="."]
margin_right = 180.0
margin_bottom = 320.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBar" parent="ShipUI" instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 11.0
margin_top = 216.0
margin_right = 91.0
margin_bottom = 227.0
texture_under = ExtResource( 11 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 8 )
fill_mode = 1
tint_under = Color( 0.352941, 0.352941, 0.352941, 1 )
tint_progress = Color( 0.92549, 1, 0.054902, 0.576471 )
custom_color = Color( 0.992157, 1, 0, 1 )
visibility = 0.5
Trans_type = 2
value_type = "Ep"

[node name="Label" parent="ShipUI/EnergyBar" index="0"]
show_behind_parent = true
margin_left = 50.0
margin_top = 5.0
margin_right = 80.0
margin_bottom = 21.0
custom_styles/normal = ExtResource( 9 )
text = "asad"

[node name="ShieldBar" parent="ShipUI" instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 171.0
margin_top = 216.0
margin_right = 251.0
margin_bottom = 227.0
rect_scale = Vector2( -1, 1 )
texture_under = ExtResource( 11 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 8 )
fill_mode = 1
tint_under = Color( 1, 1, 1, 0.117647 )
tint_progress = Color( 0, 0.917647, 1, 0.419608 )
custom_color = Color( 0.00392157, 0.882353, 1, 1 )
visibility = 0.5
Trans_type = 4
value_type = "Sp"

[node name="WeaponSelector" parent="ShipUI" instance=ExtResource( 10 )]
[connection signal="Energy_changed" from="." to="ShipUI/EnergyBar" method="_on_value_changed"]
[connection signal="Shield_changed" from="." to="ShipUI/ShieldBar" method="_on_value_changed"]
[connection signal="weapon_Changed" from="ShipUI/WeaponSelector" to="." method="_on_WeaponSelector_weapon_Changed"]

[editable path="ShipUI/EnergyBar"]

[editable path="ShipUI/ShieldBar"]

[editable path="ShipUI/WeaponSelector"]
